# pymmcore-plus-sandbox

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  __init__.spec  build_executable.sh  environment.yml  pyproject.toml
src/pymmcore_plus_sandbox/: __init__.py  _console_widget.py  _mda_button_widget.py  _settings.py  _stage_widget.py  _utils.py  _viewfinder.py
